--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
         <h1 style="font-size: 4rem;">WIN $50,000</h1>
         <p>Start Now to Enter The $50,000 Weekly Sweepstakes!</p>
 
-
-        <button class="button">Click here to get he offer</button>
+        <a href="https://adsnextgen.g2afse.com/click?pid=2030&offer_id=1843">
+        <button class="button">Click here to get he offer</button></a>
         <div class="how-it-works">
             <h2>HOW IT WORKS</h2>
             <div class="steps">
