--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         .button {
             background: linear-gradient(135deg, #4caf50, #81c784);
             color: white;
-            border: none;
+            border: 2px solid green;
             padding: 1rem 2rem;
-            font-size: 1.2rem;
+            font-size: 1.3rem;
             border-radius: 10px;
             cursor: pointer;
             transition: background 0.3s;
