--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
     </style>
 </head>
 <body>
+    <a href="https://adsnextgen.g2afse.com/click?pid=2030&offer_id=1843">
     <div class="container">
         <h1>Don't Miss Your Chance to</h1>
         <h1 style="font-size: 4rem;">WIN $50,000</h1>
@@ -96,6 +97,7 @@
             </div>
         </div>
     </div>
+        </a>
 </body>
 <!-- Meta Pixel Code -->
 <script>
