--- a/index.html
+++ b/index.html
@@ -3,173 +3,161 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exclusive Offer - Get Started Now</title>
+    <title>Special Offer - Unlock Now!</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
-            background: linear-gradient(to right, #ff7e5f, #feb47b);
-            color: #fff;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+
+        .hero {
+            position: relative;
+            background-image: url('offer-image.jpg');
+            background-size: cover;
+            background-position: center;
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
             text-align: center;
+            color: white;
+            text-shadow: 0 4px 6px rgba(0, 0, 0, 0.6);
         }
-        .container {
-            max-width: 800px;
-            margin: 50px auto;
-            padding: 20px;
-            background: rgba(0, 0, 0, 0.8);
-            border-radius: 10px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-        }
-        header h1 {
-            font-size: 2.5em;
-        }
-        .offer-section {
-            padding: 20px;
-            position: relative;
-        }
-        .offer-image-container {
-            position: relative;
-            display: inline-block;
-            width: 100%;
-            border-radius: 10px;
-            overflow: hidden;
-        }
-        .offer-image {
-            width: 100%;
-            display: block;
-            filter: blur(3px); /* Slight blur effect */
-        }
+
         .overlay {
             position: absolute;
             top: 0;
             left: 0;
             width: 100%;
             height: 100%;
-            background: linear-gradient(to right, #ff7e5f, #feb47b);
-            opacity: 0.6;
+            background: rgba(0, 0, 0, 0.6);
         }
+
+        .hero-content {
+            position: relative;
+            z-index: 2;
+            max-width: 700px;
+            padding: 20px;
+        }
+
+        .hero h1 {
+            font-size: 3em;
+            margin-bottom: 0.5em;
+        }
+
+        .hero p {
+            font-size: 1.2em;
+            margin-bottom: 1em;
+        }
+
         .cta-button {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
             display: inline-block;
-            background: #ff0000;
-            color: #fff;
-            padding: 20px 40px;
+            background-color: #ff6600;
+            color: white;
+            padding: 15px 30px;
             font-size: 1.5em;
             text-decoration: none;
-            border-radius: 10px;
-            font-weight: bold;
-            text-transform: uppercase;
-            transition: 0.3s;
-            animation: heartbeat 1.5s infinite, shake 0.5s infinite alternate, alarmGlow 1s infinite alternate;
+            border-radius: 5px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+            animation: shake 1.5s infinite, heartbeat 2s infinite alternate;
         }
+
         .cta-button:hover {
-            background: #cc0000;
+            background-color: #cc5200;
         }
-        @keyframes heartbeat {
-            0% { transform: translate(-50%, -50%) scale(1); }
-            50% { transform: translate(-50%, -50%) scale(1.1); }
-            100% { transform: translate(-50%, -50%) scale(1); }
-        }
+
         @keyframes shake {
-            0% { transform: translate(-50%, -50%) rotate(-3deg); }
-            100% { transform: translate(-50%, -50%) rotate(3deg); }
+            0% { transform: translateX(-5px); }
+            50% { transform: translateX(5px); }
+            100% { transform: translateX(-5px); }
         }
-        @keyframes alarmGlow {
-            0% { box-shadow: 0 0 10px #ff0000; }
-            100% { box-shadow: 0 0 30px #ff0000; }
+
+        @keyframes heartbeat {
+            0% { transform: scale(1); }
+            50% { transform: scale(1.1); }
+            100% { transform: scale(1); }
         }
-        .testimonial-section, .faq-section {
-            margin-top: 30px;
+
+        .features {
+            padding: 50px 20px;
+            text-align: center;
+            background-color: #fff;
         }
-        .testimonial {
-            background: rgba(255, 255, 255, 0.2);
-            padding: 15px;
-            border-radius: 5px;
-            margin: 10px 0;
+
+        .features h2 {
+            font-size: 2em;
+            margin-bottom: 20px;
         }
-        details {
-            background: rgba(255, 255, 255, 0.2);
-            padding: 10px;
-            border-radius: 5px;
-            margin: 10px 0;
-            cursor: pointer;
+
+        .features ul {
+            list-style: none;
+            padding: 0;
+            font-size: 1.2em;
         }
+
+        .features ul li {
+            margin-bottom: 10px;
+        }
+
         footer {
-            margin-top: 20px;
+            text-align: center;
+            padding: 20px;
+            background-color: #333;
+            color: white;
             font-size: 0.9em;
         }
-        @media (max-width: 600px) {
-            .container {
-                width: 90%;
-                margin: 20px auto;
-                padding: 15px;
+
+        @media (max-width: 768px) {
+            .hero h1 {
+                font-size: 2.5em;
             }
-            header h1 {
-                font-size: 2em;
+
+            .hero p {
+                font-size: 1em;
             }
+
             .cta-button {
-                padding: 15px 30px;
                 font-size: 1.2em;
+                padding: 10px 20px;
+            }
+
+            .features h2 {
+                font-size: 1.8em;
+            }
+
+            .features ul li {
+                font-size: 1em;
             }
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <header>
-            <h1>Exclusive Live Offer!</h1>
-            <p>Don't miss this limited-time opportunity. Sign up now and claim your reward!</p>
-        </header>
-        <main>
-            <div class="offer-section">
-                <div class="offer-image-container">
-                    <img src="offer-image.jpg" alt="Special Offer" class="offer-image">
-                    <div class="overlay"></div>
-                    <a href="https://smrturl.co/a/sdcc1aecee2/8871?s1=" class="cta-button">Hurry Up!! Claim Your Offer Now !!</a>
-                </div>
-                <h2>Why Choose This Offer?</h2>
-                <ul>
-                    <li>✔ Exclusive rewards for new users</li>
-                    <li>✔ Quick and easy signup process</li>
-                    <li>✔ 100% secure and verified</li>
-                    <li>✔ Limited-time deal – act fast!</li>
-                </ul>
-            </div>
-            <div class="testimonial-section">
-                <h2>What Our Users Say</h2>
-                <div class="testimonial">
-                    <p>"This offer changed my life! Quick signup and amazing benefits."</p>
-                    <span>- Alex J.</span>
-                </div>
-                <div class="testimonial">
-                    <p>"I couldn't believe how easy and rewarding this was! Highly recommended."</p>
-                    <span>- Sarah W.</span>
-                </div>
-            </div>
-            <div class="faq-section">
-                <h2>Frequently Asked Questions</h2>
-                <details>
-                    <summary>How do I claim my reward?</summary>
-                    <p>Simply click the button above and follow the easy signup process.</p>
-                </details>
-                <details>
-                    <summary>Is this offer legitimate?</summary>
-                    <p>Absolutely! We partner with verified providers to bring you the best deals.</p>
-                </details>
-                <details>
-                    <summary>How long is this offer available?</summary>
-                    <p>It's a limited-time deal, so hurry up and claim it while it lasts!</p>
-                </details>
-            </div>
-        </main>
-        <footer>
-            <p>&copy; 2025 Exclusive Offers. All Rights Reserved.</p>
-        </footer>
+    <div class="hero">
+        <div class="overlay"></div>
+        <div class="hero-content">
+            <h1>Unlock Exclusive Rewards</h1>
+            <p>Sign up today and claim your amazing rewards. Don't miss out on this limited-time offer!</p>
+            <a href="https://glstrck.com/aff_c?offer_id=1846&aff_id=131815" class="cta-button">Claim Your Reward</a>
+        </div>
     </div>
+
+    <div class="features">
+        <h2>Why Choose This Offer?</h2>
+        <ul>
+            <li>✔ Easy registration process</li>
+            <li>✔ 100% secure and trusted</li>
+            <li>✔ Exclusive rewards tailored for you</li>
+            <li>✔ Limited-time availability</li>
+        </ul>
+    </div>
+
+    <footer>
+        &copy; 2025 Special Rewards. All rights reserved.
+    </footer>
 </body>
 <!-- Meta Pixel Code -->
 <script>
