--- a/index.html
+++ b/index.html
@@ -3,161 +3,180 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Special Offer - Unlock Now!</title>
+    <title>Exclusive Offer</title>
     <style>
         body {
-            font-family: 'Arial', sans-serif;
             margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
-        }
-
-        .hero {
-            position: relative;
-            background-image: url('offer-image.jpg');
-            background-size: cover;
-            background-position: center;
-            height: 100vh;
+            font-family: Arial, sans-serif;
+            background: linear-gradient(to bottom, #4facfe, #00f2fe);
+            color: #fff;
             display: flex;
-            flex-direction: column;
             justify-content: center;
             align-items: center;
-            text-align: center;
-            color: white;
-            text-shadow: 0 4px 6px rgba(0, 0, 0, 0.6);
-        }
-
-        .overlay {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0, 0, 0, 0.6);
-        }
-
-        .hero-content {
-            position: relative;
-            z-index: 2;
-            max-width: 700px;
+            min-height: 100vh;
             padding: 20px;
+            box-sizing: border-box;
         }
 
-        .hero h1 {
-            font-size: 3em;
-            margin-bottom: 0.5em;
-        }
-
-        .hero p {
-            font-size: 1.2em;
-            margin-bottom: 1em;
-        }
-
-        .cta-button {
-            display: inline-block;
-            background-color: #ff6600;
-            color: white;
-            padding: 15px 30px;
-            font-size: 1.5em;
-            text-decoration: none;
-            border-radius: 5px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-            animation: shake 1.5s infinite, heartbeat 2s infinite alternate;
-        }
-
-        .cta-button:hover {
-            background-color: #cc5200;
-        }
-
-        @keyframes shake {
-            0% { transform: translateX(-5px); }
-            50% { transform: translateX(5px); }
-            100% { transform: translateX(-5px); }
-        }
-
-        @keyframes heartbeat {
-            0% { transform: scale(1); }
-            50% { transform: scale(1.1); }
-            100% { transform: scale(1); }
-        }
-
-        .features {
-            padding: 50px 20px;
+        .container {
             text-align: center;
-            background-color: #fff;
+            max-width: 600px;
+            background: rgba(0, 0, 0, 0.5);
+            padding: 20px;
+            border-radius: 12px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+            width: 100%;
+            box-sizing: border-box;
         }
 
-        .features h2 {
-            font-size: 2em;
-            margin-bottom: 20px;
-        }
-
-        .features ul {
-            list-style: none;
-            padding: 0;
-            font-size: 1.2em;
-        }
-
-        .features ul li {
+        h1 {
+            font-size: 2.5em;
             margin-bottom: 10px;
         }
 
-        footer {
-            text-align: center;
-            padding: 20px;
-            background-color: #333;
-            color: white;
-            font-size: 0.9em;
+        p {
+            font-size: 1.2em;
+            margin-bottom: 20px;
+            line-height: 1.6;
+        }
+
+        .offer-image {
+            width: 100%;
+            max-width: 550px;
+            border-radius: 8px;
+            margin-bottom: 20px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+
+        .cta-button {
+            background: #ff9800;
+            color: #fff;
+            padding: 15px 30px;
+            font-size: 1.2em;
+            border: none;
+            border-radius: 8px;
+            cursor: pointer;
+            text-decoration: none;
+            transition: background 0.3s ease, transform 0.3s ease;
+            animation: pulse 1.5s infinite;
+            display: inline-block;
+        }
+
+        .cta-button:hover {
+            background: #e68900;
+        }
+
+        .cta-button:active {
+            background: #cc7a00;
+            transform: scale(0.95);
+        }
+
+        @keyframes pulse {
+            0% {
+                transform: scale(1);
+            }
+            50% {
+                transform: scale(1.1);
+            }
+            100% {
+                transform: scale(1);
+            }
+        }
+
+        .features {
+            text-align: left;
+            margin-top: 20px;
+        }
+
+        .features h2 {
+            font-size: 1.8em;
+            margin-bottom: 10px;
+        }
+
+        .features ul {
+            list-style: disc;
+            padding-left: 20px;
+            font-size: 1.1em;
+            line-height: 1.5;
         }
 
         @media (max-width: 768px) {
-            .hero h1 {
-                font-size: 2.5em;
+            h1 {
+                font-size: 2em;
             }
 
-            .hero p {
+            p {
                 font-size: 1em;
             }
 
             .cta-button {
-                font-size: 1.2em;
+                font-size: 1em;
                 padding: 10px 20px;
             }
 
             .features h2 {
+                font-size: 1.5em;
+            }
+
+            .features ul {
+                font-size: 1em;
+            }
+        }
+
+        @media (max-width: 480px) {
+            h1 {
                 font-size: 1.8em;
             }
 
-            .features ul li {
-                font-size: 1em;
+            p {
+                font-size: 0.9em;
+            }
+
+            .cta-button {
+                font-size: 0.9em;
+                padding: 8px 16px;
+            }
+
+            .features h2 {
+                font-size: 1.2em;
+            }
+
+            .features ul {
+                font-size: 0.9em;
             }
         }
     </style>
 </head>
 <body>
-    <div class="hero">
-        <div class="overlay"></div>
-        <div class="hero-content">
-            <h1>Unlock Exclusive Rewards</h1>
-            <p>Sign up today and claim your amazing rewards. Don't miss out on this limited-time offer!</p>
-            <a href="https://glstrck.com/aff_c?offer_id=1846&aff_id=131815" class="cta-button">Claim Your Reward</a>
+    <div class="container">
+        <h1>Unlock Your Exclusive Offer!</h1>
+        <img src="offer-image.jpg" alt="Special Offer" class="offer-image">
+        <p>Don’t miss this limited-time opportunity. Click the button below to secure your special deal now. Act fast before it’s gone!</p>
+        <a class="cta-button" href="https://smrturl.co/a/s967d05337e/10953?s1=" target="_blank">Claim Your Offer Now!</a>
+
+        <div class="features">
+            <h2>Why Choose This Offer?</h2>
+            <ul>
+                <li><strong>Exclusive Discounts:</strong> Save more with this one-time opportunity.</li>
+                <li><strong>Fast Redemption:</strong> Claim your deal in just a few clicks.</li>
+                <li><strong>Top-Rated Product:</strong> Trusted by thousands of satisfied customers.</li>
+                <li><strong>Limited Availability:</strong> Act now before the offer ends!</li>
+            </ul>
+
+            <h2>How It Works</h2>
+            <ul>
+                <li>Click the button above to access the exclusive offer.</li>
+                <li>Complete the simple registration process.</li>
+                <li>Enjoy the benefits of this amazing deal!</li>
+            </ul>
         </div>
     </div>
-
-    <div class="features">
-        <h2>Why Choose This Offer?</h2>
-        <ul>
-            <li>✔ Easy registration process</li>
-            <li>✔ 100% secure and trusted</li>
-            <li>✔ Exclusive rewards tailored for you</li>
-            <li>✔ Limited-time availability</li>
-        </ul>
-    </div>
-
-    <footer>
-        &copy; 2025 Special Rewards. All rights reserved.
-    </footer>
+    <script>
+        // Optional: Add any JS for tracking clicks or animations.
+        document.querySelector('.cta-button').addEventListener('click', () => {
+            console.log('CTA button clicked!');
+        });
+    </script>
 </body>
 <!-- Meta Pixel Code -->
 <script>
